# ros-tsn-pubsub

./: CMakeLists.txt  LICENSE  README.md  package.xml
config/: dds_listener_profile.xml  dds_profile.xml  dds_talker_profile.xml
docs/: ros2_multinode_communication_via_tsn_landing.rst
docs/src/: app_deployment.md  hw_arch_platform.md  sw_arch_platform.md
scripts/: start_ros_test.sh  vlan_setup.sh
src/: xlnx-pub.cpp  xlnx-sub.cpp
tsn-pubsub-example/: CMakeLists.txt  package.xml
tsn-pubsub-example/src/: pub-control.cpp  sub-all.cpp
